[FIX] Problem matcher; refactoring WIP

--- a/HsLogic/.vscode/settings.json
+++ b/HsLogic/.vscode/settings.json
@@ -5,19 +5,19 @@
         "**/.svn": true,
         "**/.hg": true,
         "**/.DS_Store": true,
-        "**/.vscode/": true,
+        "**/.vscode/": false,
         "**/.settings": true,
         "**/bin": true,
         "**/dist": true,
         "**/node_modules/": true,
         "**/obj": true,
-        "**/test": true,
+        "test": true,
         "**/src.old": true,
         ".gitignore": true,
         ".project": true,
         "HsLogic.csproj*": true,
         "packages.config": true,
-        "package.json": true
+        "package.json": false
     },
     "explorer.openEditors.visible": 0,
     "typescript.tsdk": "./node_modules/typescript/lib",
